--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/tests/index.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/tests/index.html
@@ -26,7 +26,8 @@
         'fractions/basic.html',
         'fractions/gaps_and_mixed_units.html',
         'tightGroups/tracks.html',
-        'directions.html'
+        'directions.html',
+        'precalculate.html'
       ]);
     </script>
   </body>
