--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -149,6 +149,7 @@
         //     slowResize();
         // });
     </script>
+    <div class="css-grid-error-back"></div>
     <div class="css-grid-error">
         <h4>This app requires support for CSS Grid Layout in your web browser</h4>
         <p>To enable it in Google Chrome:</p>
@@ -159,7 +160,6 @@
             <li>Restart Chrome</li>
         </ol>
         <p>
-            <a href="javascript:" onclick="document.querySelector('.css-grid-error').style.opacity = 0; setTimeout(function () { document.querySelector('.css-grid-error').style.display = 'none'; }, 500);" class="dismiss">dismiss</a>
             We are working on extending support to all modern web browsers.
         </p>
     </div>
