--- a/src/Launcher/wwwroot/Launcher/elements/launcher-menu/launcher-menu.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-menu/launcher-menu.html
@@ -23,8 +23,8 @@
 
                     lis = Array.prototype.slice.call(lis, 0);
                     lis.sort(function (a, b) {
-                        var at = a.innerText.trim();
-                        var bt = b.innerText.trim();
+                        var at = a.dataset.sortNumber || a.innerText.trim();
+                        var bt = b.dataset.sortNumber || b.innerText.trim();
 
                         if (at < bt) {
                             return -1;
