--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -7,101 +7,105 @@
 
     <!-- Import Starcounter specific components -->
     <link rel="import" href="/sys/starcounter.html" />
-    <link rel="import" href="/sys/starcounter-debug-aid/src/starcounter-debug-aid.html" />
+    <!-- Disable untill migrated to Polymer1 <link rel="import" href="/sys/starcounter-debug-aid/src/starcounter-debug-aid.html" /> -->
 
     <!-- Import our elements -->
-    <link rel="import" href="/Launcher/elements/launcher-layout/launcher-main.html" />
+    <!-- Disable untill migrated to Polymer1 <link rel="import" href="/Launcher/elements/launcher-layout/launcher-main.html" />
     <link rel="import" href="/Launcher/elements/launcher-launchpad/launcher-launchpad.html" />
     <link rel="import" href="/Launcher/elements/launcher-hot-key/launcher-hot-key.html" />
     <link rel="import" href="/Launcher/elements/launcher-search-input/launcher-search-input.html" />
-    <link rel="import" href="/Launcher/elements/launcher-menu/launcher-menu.html" />
+    <link rel="import" href="/Launcher/elements/launcher-menu/launcher-menu.html" /> -->
     <link rel="import" href="/sys/starcounter-include/starcounter-include.html" />
 
-    <link rel="import" href="/sys/console-log/console-log.html" />
+    <!-- Disable untill migrated to Polymer1 <link rel="import" href="/sys/console-log/console-log.html" /> -->
 
     <!-- Import other elements used in this document -->
-    <link rel="import" href="/sys/core-icon/core-icon.html" />
-    <link rel="import" href="/sys/core-icon-button/core-icon-button.html" />
-    <link rel="import" href="/sys/paper-toggle-button/paper-toggle-button.html" />
-    <link rel="import" href="/sys/core-field/core-field.html" />
+    <!-- Disable untill migrated to Polymer1 <link rel="import" href="/sys/core-icon/core-icon.html" /> -->
+    <!-- Disable untill migrated to Polymer1 <link rel="import" href="/sys/core-icon-button/core-icon-button.html" /> -->
+    <!-- Disable untill migrated to Polymer1 <link rel="import" href="/sys/paper-toggle-button/paper-toggle-button.html" /> -->
+    <!-- Disable untill migrated to Polymer1 <link rel="import" href="/sys/core-field/core-field.html" /> -->
 
 
     <link rel="import" href="/sys/imported-template/imported-template.html" />
+    <link rel="import" href="/sys/dom-bind-notifier/dom-bind-notifier.html" />
     <link rel="import" href="/sys/juicy-tile-editor/src/juicy-tile-editor.html" />
-    <link rel="import" href="/sys/juicy-display-router/juicy-display-router.html" />
-    <link rel="import" href="/sys/juicy-redirect/src/juicy-redirect.html" />
+    <!-- Disable untill migrated to Polymer1 <link rel="import" href="/sys/juicy-display-router/juicy-display-router.html" /> -->
+    <!-- Disable untill migrated to Polymer1 <link rel="import" href="/sys/juicy-redirect/src/juicy-redirect.html" /> -->
 
     <!-- Style sheets -->
-    <link rel="import" href="/sys/bootstrap.html" />
+    <!-- Disable untill migrated to Polymer1 <link rel="import" href="/sys/bootstrap.html" /> -->
     <link rel="stylesheet" href="/Launcher/css/style.css" />
 
     <link rel="shortcut icon" href="/Launcher/favicon.ico" />
 </head>
 <body is="launcher-main">
-    <template id="root" bind>
-        <template if="{{editingMode$}}">
+    <template id="root" is="dom-bind">
+        <template is="dom-if" restamp if="{{model.editingMode$}}">
             <div class="launcher-toolbar launcher-topbar">&nbsp;</div>
         </template>
 
         <div class="launcher-toolbar launcher-topbar">
             <a href="/"><i id="homeIcon" class="glyphicon glyphicon-home"></i></a>
             <core-field class="launcher-theme">
-                <a href="javascript:" onclick="getModel(this).searchBar.submit$++" class="icon">
+                <a href="javascript:" value="{{model.searchBar.submit$}}" onclick="++this.value" class="icon">
                     <i class="glyphicon glyphicon-search"></i>
                 </a>
-                <launcher-search-input placeholder="Search" value="{{searchBar.query$}}" closeaction="{{searchBar.close$}}" submitaction="{{searchBar.submit$}}"></launcher-search-input>
-                <link is="juicy-redirect" history url="{{searchBar.searchEngineResultPageUrl$}}" />
-                <div class="preview" hidden?="{{!searchBar.previewVisible}}">
-                    <starcounter-include class="preview" partial="{{searchBar.preview}}"></starcounter-include>
+                <launcher-search-input placeholder="Search" value="{{model.searchBar.query$}}" closeaction="{{model.searchBar.close$}}" submitaction="{{model.searchBar.submit$}}"></launcher-search-input>
+                <link is="juicy-redirect" history url="{{model.searchBar.searchEngineResultPageUrl$}}" />
+                <div class="preview" hidden?="{{!model.searchBar.previewVisible}}">
+                    <starcounter-include class="preview" partial="{{model.searchBar.preview}}"></starcounter-include>
                 </div>
             </core-field>
-            <template is="imported-template" content="{{ user.Html }}" bind="{{user}}"></template>
+            <template is="imported-template" content$="{{model.user.Html}}" model="{{model.user}}"></template>
 
             <!--<core-icon-button id="account" icon="account"></core-icon-button>-->
-            <template if="{{!layoutModified$}}">
-                <core-icon-button id="settings" active="{{editingMode$}}" icon="settings" onclick="getModel(this).editingMode$ = !getModel(this).editingMode$"></core-icon-button>
+            <!-- TODO: migrate getModel boolean trigger -->
+            <template is="dom-if" restamp if="{{!model.layoutModified$}}">
+                <core-icon-button id="settings" active="{{model.editingMode$}}" icon="settings" onclick="getModel(this).editingMode$ = !getModel(this).editingMode$"></core-icon-button>
             </template>
-            <template if="{{layoutModified$}}">
-                <core-icon-button id="settings" active="{{editingMode$}}" icon="settings" onclick="getModel(this).editingMode$ = !getModel(this).editingMode$" class="modified" title="You have unsaved layout changes on this page!"></core-icon-button>
+            <template is="dom-if" restamp if="{{model.layoutModified$}}">
+                <core-icon-button id="settings" active="{{model.editingMode$}}" icon="settings" onclick="getModel(this).editingMode$ = !getModel(this).editingMode$" class="modified" title="You have unsaved layout changes on this page!"></core-icon-button>
             </template>
         </div>
 
         <div id="launcher-menu">
             <launcher-menu>
                 <ul>
-                    <template is="imported-template" content="{{ menu.Html }}" bind="{{ menu }}"></template>
+                    <template is="imported-template" content$="{{model.menu.Html}}" model="{{model.menu}}"></template>
                 </ul>
             </launcher-menu>
         </div>
 
         <div id="launcher-content">
             <div class="launchpad">
-                <launcher-launchpad json="{{launchpad}}"></launcher-launchpad>
+                <launcher-launchpad json="{{model.launchpad}}"></launcher-launchpad>
             </div>
-            <juicy-display-route match-path="^\/$|\/launcher/?$" display-selector=".launchpad"></juicy-display-route>
+            <!-- Disable untill migrated to Polymer1 <juicy-display-route match-path="^\/$|\/launcher/?$" display-selector=".launchpad"></juicy-display-route> -->
 
             <!-- <starcounter-include -->
             <!-- class="workspace launcher" partial="{{ results }}"></starcounter-include> -->
             <!-- just "/" or whatever starting from "/launcher/.." except stuff starting from "/launcher/workspace" -->
 
             <!-- Dashboard/results -->
-            <starcounter-include class="workspace launcher" name="/Launcher/results" partial="{{results}}"></starcounter-include>
+            <starcounter-include class="workspace launcher" name="/Launcher/results" partial="{{model.results}}"></starcounter-include>
             <!-- just "/" or whatever starting from "/launcher/.." except stuff starting from "/launcher/workspace" -->
-            <juicy-display-route match-path="^\/launcher\/" display-selector=".workspace.launcher"></juicy-display-route>
+            <!-- <juicy-display-route match-path="^\/launcher\/" display-selector=".workspace.launcher"></juicy-display-route> -->
 
             <!-- Workspaces -->
-            <template repeat="{{ workspaces }}">
+            <template is="dom-repeat" items="{{model.workspaces}}">
                 <!-- - workspace -->
-                <juicy-display-route match-path="^\/{{AppName}}" display-selector=".workspace.{{AppName}}"></juicy-display-route>
-                <starcounter-include class="workspace {{AppName}}" partial="{{}}"></starcounter-include>
+                <juicy-display-route match-path="{{concat('^\/', item.AppName)}}" display-selector="{{concat('.workspace.', item.AppName)}}"></juicy-display-route>
+                App name<span>{{item.AppName}}</span>
+                <starcounter-include class="{{concat('workspace', item.AppName)}}" partial="{{item}}"></starcounter-include>
             </template>
         </div>
 
+        <!-- TODO migrate this getModel -->
         <launcher-hot-key keys="Ctrl+E" onkeypress="getModel(this).editingMode$ = !getModel(this).editingMode$"></launcher-hot-key>
         <launcher-hot-key keys="Esc" onkeypress="getModel(this).editingMode$ = false"></launcher-hot-key>
-        <template if="{{editingMode$}}">
+        <template is="dom-if" restamp if="{{model.editingMode$}}">
             <div id="elementSettings" class="launcher-topbar">
-                <juicy-tile-editor selectionmode watchedtagnames="['JUICY-TILE-LIST', 'JUICY-TILE-GRID']" class="max-height" modified="{{layoutModified$}}"></juicy-tile-editor>
+                <juicy-tile-editor selectionmode watchedtagnames="['JUICY-TILE-LIST', 'JUICY-TILE-GRID']" class="max-height" modified="{{model.layoutModified$}}"></juicy-tile-editor>
                 <script>
                     document.querySelector("juicy-tile-editor").addEventListener("juicy-tile-editor-close", function (e) {
                         getModel(e.target).editingMode$ = false;
@@ -109,7 +113,14 @@
                 </script>
             </div>
         </template>
+
+        <dom-bind-notifier path="model" observed-object="{{model}}" deep></dom-bind-notifier>
     </template>
+    <script>
+      document.currentScript.previousElementSibling.concat = function(a,b){
+         return a+b;
+      }
+    </script>
 
     <puppet-client ref="root"></puppet-client>
     <starcounter-debug-aid></starcounter-debug-aid>
