--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-border-picker.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-border-picker.html
@@ -1,136 +1,169 @@
 <link rel="import" href="../../polymer/polymer.html" />
 <link rel="import" href="../../juicy-color-picker/src/juicy-color-picker.html" />
 
-<polymer-element name="juicy-border-picker" attributes="pallete value">
+<dom-module id="juicy-border-picker">
+    <style>
+        :host ul {
+            border: none;
+            padding: 0px;
+            margin: 0px;
+            list-style-type: none;
+            margin: 5px 0px;
+        }
+
+        :host ul li {
+        }
+
+        :host ul li:hover {
+            background-color: #F0F0F0;
+        }
+
+        :host ul li.selected {
+            background-color: #F1F1F1;
+        }
+
+        :host ul li a {
+            display: block;
+            padding: 10px 0px;
+        }
+
+        :host ul li a span {
+            display: block;
+            border-color: #444444;
+            border-bottom-width: 4px;
+        }
+
+        :host input, 
+        :host select {
+            height: 25px;
+            min-width: 25px;
+            width: 100%;
+            box-sizing: border-box;
+            display: block;
+            white-space: nowrap;
+            box-sizing: border-box;
+            border-radius: 1px;
+            border: none;
+            margin: 0px;
+            padding: 0px 4px;
+            font-size: 12px;
+            border: 1px solid #C0C0C0;
+        }
+
+        :host input.width {
+            width: 60%;
+            float: left;
+        }
+
+        :host select.width {
+            width: 40%;
+            float: left;
+        }
+
+        :host div.width {
+            overflow: auto;
+        }
+
+        :host div.value {
+            margin-top: 10px;
+            overflow: auto;
+        }
+
+        :host div.value input {
+            width: calc(100% - 25px);
+            float: left;
+        }
+
+        :host div.value button {
+            height: 25px;
+            width: 22px;
+            float: left;
+            margin-left: 3px;
+        }
+    </style>
     <template>
-        <style>
-            ul {
-                border: none;
-                padding: 0px;
-                margin: 0px;
-                list-style-type: none;
-                margin: 5px 0px;
-            }
-
-            ul li {
-            }
-
-            ul li:hover {
-                background-color: #F0F0F0;
-            }
-
-            ul li.selected {
-                background-color: #F1F1F1;
-            }
-
-            ul li a {
-                display: block;
-                padding: 10px 0px;
-            }
-
-            ul li a span {
-                display: block;
-                border-color: #444444;
-                border-bottom-width: 4px;
-            }
-
-            input, select {
-                height: 25px;
-                min-width: 25px;
-                width: 100%;
-                box-sizing: border-box;
-                display: block;
-                white-space: nowrap;
-                box-sizing: border-box;
-                border-radius: 1px;
-                border: none;
-                margin: 0px;
-                padding: 0px 4px;
-                font-size: 12px;
-                border: 1px solid #C0C0C0;
-            }
-
-            input.width {
-                width: 60%;
-                float: left;
-            }
-
-            select.width {
-                width: 40%;
-                float: left;
-            }
-
-            div.width {
-                overflow: auto;
-            }
-
-            div.value {
-                margin-top: 10px;
-                overflow: auto;
-            }
-
-            div.value input {
-                width: calc(100% - 25px);
-                float: left;
-            }
-
-            div.value button {
-                height: 25px;
-                width: 22px;
-                float: left;
-                margin-left: 3px;
-            }
-        </style>
         <div class="container">
             <div class="width">
-                <input type="text" value="{{borderWidth}}" class="width" />
-                <select class="width" value="{{borderWidthUnit}}">
+                <input type="text" value="{{borderWidth::change}}" class="width" />
+                <select class="width" value="{{borderWidthUnit::change}}">
                     <option value="px">px</option>
                     <option value="em">em</option>
                     <option value="%">%</option>
                 </select>
             </div>
             <ul>
-                <template repeat="{{item in borderStyles}}">
-                    <template if="{{item == borderStyle}}">
+                <template is="dom-repeat" items="{{borderStyles}}" as="item">
+                    <template is="dom-if" if="{{compare(item, borderStyle)}}">
                         <li class="selected">
-                            <a href="javascript:" class="{{item}}" on-click="{{applyStyle}}">
-                                <span class="{{item}}" style="border-bottom-style:{{item}}"></span>
+                            <a href="javascript:" data-style$="{{item}}" on-click="applyStyle">
+                                <span class="{{item}}" style$="{{getBorderStyle(item)}}"></span>
                             </a>
                         </li>
                     </template>
-                    <template if="{{item != borderStyle}}">
+                    <template is="dom-if" if="{{!compare(item, borderStyle)}}">
                         <li>
-                            <a href="javascript:" class="{{item}}" on-click="{{applyStyle}}">
-                                <span class="{{item}}" style="border-bottom-style:{{item}}"></span>
+                            <a href="javascript:" data-style$="{{item}}" on-click="applyStyle">
+                                <span class="{{item}}" style$="{{getBorderStyle(item)}}"></span>
                             </a>
                         </li>
                     </template>
                 </template>
             </ul>
-            <juicy-color-picker value="{{borderColor}}" on-juicy-color-picker-value-changed="{{refreshValue}}"></juicy-color-picker>
+            <juicy-color-picker value="{{borderColor::change}}" on-change="refreshValueAsync"></juicy-color-picker>
             <div class="value">
-                <input type="text" value="{{value}}" readonly="readonly" />
-                <button type="button" on-click="{{clearBorder}}">x</button>
+                <input type="text" value="[[value]]" readonly="readonly" />
+                <button type="button" on-click="clearBorder">x</button>
             </div>
         </div>
     </template>
     <script>
-        Polymer('juicy-border-picker', {
-            borderStyles: ["solid", "dashed", "dotted", "double"],
-            borderStyle: null,
-            borderWidth: 0,
-            borderWidthUnit: "px",
-            borderColor: null,
+        Polymer({
+            is: "juicy-border-picker",
+            //borderStyles: ["solid", "dashed", "dotted", "double"],
             inParse: false,
+            properties: {
+                pallete: {
+                    type: String
+                },
+                value: {
+                    type: String,
+                    observer: "valueChanged"
+                },
+                borderStyle: {
+                    type: String,
+                    value: null,
+                    observer: "borderStyleChanged"
+                },
+                borderStyles: {
+                    type: Array,
+                    value: ["solid", "dashed", "dotted", "double"]
+                },
+                borderWidth: {
+                    type: Number,
+                    value: 0,
+                    observer: "borderWidthChanged"
+                },
+                borderWidthUnit: {
+                    type: String,
+                    value: "px",
+                    observer: "borderWidthUnitChanged"
+                },
+                borderColor: {
+                    type: String,
+                    value: null,
+                    observer: "borderColorChanged"
+                }
+            },
             ready: function () {
             },
-            resetInParse: function () {
-                var that = this;
+            resetInParse: function (fire) {
+                if (fire) {
+                    this.fire("change");
+                }
 
                 setTimeout(function () {
-                    that.inParse = false;
-                }, 500);
+                    this.inParse = false;
+                }.bind(this), 500);
             },
             refreshValue: function () {
                 if (this.inParse) {
@@ -138,8 +171,12 @@
                 }
 
                 this.inParse = true;
-                this.value = [this.borderStyle, this.borderWidth + this.borderWidthUnit, this.borderColor].join(" ");
-                this.resetInParse();
+                this.set("value", [this.borderStyle, this.borderWidth + this.borderWidthUnit, this.borderColor].join(" "));
+                console.log("refreshValue", this.value);
+                this.resetInParse(true);
+            },
+            refreshValueAsync: function () {
+                setTimeout(this.refreshValue.bind(this));
             },
             parseValue: function () {
                 if (this.inParse) {
@@ -147,10 +184,10 @@
                 }
 
                 this.inParse = true;
-                this.borderStyle = "";
-                this.borderWidth = "0";
-                this.borderWidthUnit = "px";
-                this.borderColor = "";
+                this.set("borderStyle", "");
+                this.set("borderWidth", "0");
+                this.set("borderWidthUnit", "px");
+                this.set("borderColor", "");
 
                 if (!this.value) {
                     this.resetInParse();
@@ -165,45 +202,55 @@
                     if (!item) {
                         continue;
                     } else if (/^\d+[.]?\d*\w+$/gi.test(item)) {
-                        this.borderWidth = parseFloat(item);
-                        this.borderWidthUnit = item.replace(/[\d\W]/gi, "");
+                        this.set("borderWidth", parseFloat(item));
+                        this.set("borderWidthUnit", item.replace(/[\d\W]/gi, ""));
                     } else if (this.borderStyles.indexOf(item) >= 0) {
-                        this.borderStyle = item;
+                        this.set("borderStyle", item);
                     } else {
-                        this.borderColor = item;
+                        this.set("borderColor", item);
                     }
                 }
 
                 this.resetInParse();
             },
             valueChanged: function () {
+                if (this.value == 5) {
+                    var a = "!!";
+                }
+                console.log("valueChanged", this.value);
                 if (this.inParse) {
                     return;
                 }
 
-                this.fire("juicy-border-picker-value-changed");
+                this.fire("change");
                 this.parseValue();
             },
             borderStyleChanged: function () {
-                this.refreshValue();
+                this.refreshValueAsync();
             },
             borderWidthChanged: function () {
-                this.refreshValue();
+                this.refreshValueAsync();
             },
             borderWidthUnitChanged: function () {
-                this.refreshValue();
+                this.refreshValueAsync();
             },
-            borderColorChanger: function () {
-                this.refreshValue();
+            borderColorChanged: function () {
+                this.refreshValueAsync();
             },
             applyStyle: function (e) {
-                this.borderStyle = e.target.className;
-                this.refreshValue();
+                this.set("borderStyle", e.currentTarget.dataset["style"]);
+                this.refreshValueAsync();
             },
             clearBorder: function () {
-                this.value = "";
+                this.set("value", "");
                 this.valueChanged();
+            },
+            compare: function (value1, value2) {
+                return value1 == value2;
+            },
+            getBorderStyle: function (value) {
+                return "border-bottom-style:" + value + ";";
             }
         });
     </script>
-</polymer-element>
+</dom-module>
