--- a/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
@@ -1,241 +1,236 @@
 <link rel="import" href="/sys/polymer/polymer.html">
 
 <template id="launchpad-tile">
-  <launchpad-tile>
-    <a href="/{{appName}}">
-      <launchpad-icon>
-        <!-- icon goes here -->
-      </launchpad-icon>
-      <h5 title="{{name.description}}">{{name.name}}</h5>
-    </a>
-  </launchpad-tile>
-
+    <launchpad-tile>
+        <a href="/{{appName}}">
+            <launchpad-icon>
+                <!-- icon goes here -->
+            </launchpad-icon>
+            <h5 title="{{name.description}}">{{name.name}}</h5>
+        </a>
+    </launchpad-tile>
 </template>
 
-<polymer-element name="launcher-launchpad" attributes="json">
-  <template id="tilesGrid">
-    <juicy-tiles-setup-sync
-        name="/launcher/launchpad"
-        storedValue="{{json.juicyTilesSetup}}"
-        apiUrl="/launcher/juicytilessetup"></juicy-tiles-setup-sync>
-    <juicy-tile-grid
-        id="launchpadGrid"
-        class="launchpad-grid"
-        defaultTileSetup="{
-            'height': 82,
-            'width': 68
-          }"
-        gutter="20"
-        setup="[[ json.juicyTilesSetup | clonedSetup ]]"
-        refreshonmutation
-        refreshonresize>
-    </juicy-tile-grid>
-  </template>
-<script>
-  (function () {
-    var currentDocument = (document._currentScript || document.currentScript).ownerDocument;
-    var tileTempl = currentDocument.getElementById("launchpad-tile");
-    var tilesGrid = currentDocument.getElementById("tilesGrid");
-    // var LauncherLaunchpadPrototype = Object.create( (HTMLTemplateElement || HTMLElement ).prototype);
+<dom-module id="launcher-launchpad">
+    <template id="tilesGrid">
+        <juicy-tiles-setup-sync name="/launcher/launchpad" storedValue="{{json.juicyTilesSetup}}" apiUrl="/launcher/juicytilessetup"></juicy-tiles-setup-sync>
+        <juicy-tile-grid id="launchpadGrid" class="launchpad-grid" defaultTileSetup='{ "height": 82, "width": 68 }'
+                         gutter="20"
+                         setup="[[clonedSetup(json.juicyTilesSetup)]]"
+                         refreshonmutation="true"
+                         refreshonresize="true">
+        </juicy-tile-grid>
+    </template>
+    <script>
+        (function () {
+            var currentDocument = (document._currentScript || document.currentScript).ownerDocument;
+            var tileTempl = currentDocument.getElementById("launchpad-tile");
+            var tilesGrid = currentDocument.getElementById("tilesGrid");
+            // var LauncherLaunchpadPrototype = Object.create( (HTMLTemplateElement || HTMLElement ).prototype);
 
-    var LauncherLaunchpadPrototype = {};
-    LauncherLaunchpadPrototype.parseDeclaration = function(elementElement){
-      this.lightFromTemplate(this.fetchTemplate(elementElement));
-    };
-    LauncherLaunchpadPrototype.clonedSetup = function (json) {
-      switch(typeof json){
-        case "object":
-          return JSON.parse(JSON.stringify(json));
-        case "string":
-          return json && JSON.parse(json) ;
-      }
-    };
-
-
-    /**
-     * Merge two SC merged responses into one.
-     * @param  {[type]} json [description]
-     * @return {[type]}      [description]
-     */
-    LauncherLaunchpadPrototype.parseJson = function parseJson(json){
-      var map = {};
-      var iconlessNames = [];
-
-      for (var appName in json.icons) {
-        if( json.icons.hasOwnProperty( appName ) ) {
-          map[appName] = {
-            appName: appName,
-            icon: json.icons[appName]
-            //, name: null
-          };
-        }
-      }
-      for ( appName in json.names) {
-        if( json.names.hasOwnProperty( appName ) ) {
-          if(map[appName]){
-            map[appName].name = json.names[appName];
-          } else{
-            map[appName] = {
-              appName: appName,
-              name: json.names[appName]
-              //, icon: null
-            };
-            iconlessNames.push(appName);
-          }
-        }
-      }
-      this.mapPerAppName = map;
-      this.iconlessNames = iconlessNames;
-    };
-
-    /**
-     * Import partial via HTML Import.
-     * @return {HTMLLinkElement}      HTML Import element
-     */
-    function loadIconsTemplate( href, callback ) {
-      var link = document.createElement('link');
-      link.rel = "import";
-      link.href = href;
-      link.onload =  callback;
-      // guessed workaround for Polyjuice/Launcher#82, Polymer/polymer#554
-      setTimeout( function appendAsync(){
-          document.head.appendChild(link);
-      });
-      return this;
-    }
-
-    /**
-     * Insert template into DOM.
-     * @param {launcher-launchpad}
-     * @returns {HTMLTemaplteElement} inserted template (launchpad.subTemplate)
-     */
-    function insertTemplate(launchpad){
-      launchpad.subTemplate.bindingDelegate = new PolymerExpressions(); //use PolymerExpressions. This allows <template if="{{val == 1}}">, etc
-
-      launchpad.$.launchpadGrid.appendChild(launchpad.subTemplate);
-      // this.subTemplate.model = this.model;
-      // this.subTemplate.model = this.json.icons;
-      // Wait for any polymer-elements in icons templates.
-      Polymer.whenReady(function attachModelWhenPolymerReady(){
-        launchpad.subTemplate.model = launchpad.mapPerAppName;
-      });
-      return launchpad.subTemplate;
-    }
-
-    /**
-     * Empty template content.
-     * @requires HTMLTemplateElement#clear (https://github.com/Polymer/TemplateBinding/blob/51df59c16e0922dec041cfe604016aac00918d5d/src/TemplateBinding.js#L595)
-     * TODO: profile this (tomalec)
-     * @extends HTMLTemplateElement.prototype.clear
-     * @return  see HTMLTemplateElement.prototype.clear
-     */
-    LauncherLaunchpadPrototype.clear = function(){
-      // return false;
-      return this.subTemplate
-            && ( !this.subTemplate.clear || this.subTemplate.clear() || true)
-            && this.subTemplate.parentNode.removeChild(this.subTemplate);
-      // IDEA: clear also content? (tomalec)
-      //      && HTMLTemplateElement.prototype.clear.call(this);
-    };
-
-
-    // or more importantly, or once Server-side could handle merging
-    // iconsHtml changed
-    LauncherLaunchpadPrototype.jsonChanged = function (oldVal, newVal) {
-      this.parseJson(newVal);
-      if (newVal.icons && newVal.icons.Html) {
-        var launchpad = this;
-        loadIconsTemplate(
-          "/launcher/launchpad" + newVal.icons.Html,
-          function processImportedDocument(){
-            launchpad.clear();
-
-            createAndInsertMergedTemplate(
-              launchpad,
-              this.import.querySelectorAll("launchpad-tile")
-            );
-
-          }
-        );
-      } else if (newVal) {
-          //This row suppose to help debugging of a strange polymer exception.
-          console.warn("A wrong value has been assigned to launch-pad.json", newVal, this);
-          createAndInsertMergedTemplate(this);
-      } else {
-          createAndInsertMergedTemplate(this);
-      }
-    };
-
-    function createAndInsertMergedTemplate(launchpad, tiles){
-        var template = document.createElement("template");
-        template.setAttribute("bind","");
-
-        if( tiles ){
-            tiles = Array.prototype.slice.call(tiles, 0);
-            tiles.sort(function (a, b) {
-                var aName = a.getAttribute("appname").trim();
-                var bName = b.getAttribute("appname").trim();
-
-                aName = launchpad.mapPerAppName[aName].name;
-                bName = launchpad.mapPerAppName[bName].name;
-
-                var at = typeof aName.sortNumber == "undefined" ? aName.name : aName.sortNumber;
-                var bt = typeof bName.sortNumber == "undefined" ? bName.name : bName.sortNumber;
-
-                at = at.toString();
-                bt = bt.toString();
-
-                if (at < bt) {
-                    return -1;
-                } else if (at > bt) {
-                    return 1;
+            var LauncherLaunchpadPrototype = {
+                is: "launcher-launchpad",
+                properties: {
+                    json: {
+                        type: Object
+                    }
                 }
+            };
 
-                return 0;
-            });
+            LauncherLaunchpadPrototype.parseDeclaration = function (elementElement) {
+                this.lightFromTemplate(this.fetchTemplate(elementElement));
+            };
 
-          // wrap each tile in template and add to aggregated one
-          for( var nodeNo=0; nodeNo < tiles.length; nodeNo++){
-            var tile = tiles[nodeNo];
-            var appName = tile.getAttribute("appname");
-            // get exact template for icon (as some imports/scripts could be there)
-            var appIconTempl = tile.querySelector("template");
-            // change binding to match launchpad's own json structure.
-            appIconTempl.setAttribute("bind","{{icon}}");
-            // clone our tile template
-            var newTile = document.importNode(tileTempl.content, true);
-            // distribute icon into tile
-            appIconTempl && newTile.querySelector("launchpad-icon").appendChild(appIconTempl);
-            // wrap tile into binding namespace
-            var tileAppNamespace = document.createElement("template");
-            tileAppNamespace.setAttribute("bind","{{"+appName +"}}");
-            tileAppNamespace.content.appendChild(newTile);
-            // put bound tile into template of aggregated tiles
-            template.content.appendChild(tileAppNamespace);
-          }
+            LauncherLaunchpadPrototype.clonedSetup = function (json) {
+                switch (typeof json) {
+                    case "object":
+                        return JSON.parse(JSON.stringify(json));
+                    case "string":
+                        return json && JSON.parse(json);
+                }
+            };
 
-        }
-        // add tiles for iconless apps
-        for( var nodeNo=0; nodeNo < launchpad.iconlessNames.length; nodeNo++){
-          var appName = launchpad.iconlessNames[nodeNo];
-          var newTile = document.importNode(tileTempl.content, true);
-          // wrap tile into binding namespace
-          var tileAppNamespace = document.createElement("template");
-          tileAppNamespace.setAttribute("bind","{{"+appName +"}}");
-          tileAppNamespace.content.appendChild(newTile);
-          // put bound tile into template of aggregated tiles
-          template.content.appendChild(tileAppNamespace);
-        }
-        // stamp template into main document
-        launchpad.subTemplate = template;
-        insertTemplate(launchpad);
+            /**
+             * Merge two SC merged responses into one.
+             * @param  {[type]} json [description]
+             * @return {[type]}      [description]
+             */
+            LauncherLaunchpadPrototype.parseJson = function parseJson(json) {
+                var map = {};
+                var iconlessNames = [];
 
-    }
+                for (var appName in json.icons) {
+                    if (json.icons.hasOwnProperty(appName)) {
+                        map[appName] = {
+                            appName: appName,
+                            icon: json.icons[appName]
+                            //, name: null
+                        };
+                    }
+                }
+                for (appName in json.names) {
+                    if (json.names.hasOwnProperty(appName)) {
+                        if (map[appName]) {
+                            map[appName].name = json.names[appName];
+                        } else {
+                            map[appName] = {
+                                appName: appName,
+                                name: json.names[appName]
+                                //, icon: null
+                            };
+                            iconlessNames.push(appName);
+                        }
+                    }
+                }
+                this.mapPerAppName = map;
+                this.iconlessNames = iconlessNames;
+            };
 
-    Polymer(LauncherLaunchpadPrototype);
+            /**
+             * Import partial via HTML Import.
+             * @return {HTMLLinkElement}      HTML Import element
+             */
+            function loadIconsTemplate(href, callback) {
+                var link = document.createElement('link');
+                link.rel = "import";
+                link.href = href;
+                link.onload = callback;
+                // guessed workaround for Polyjuice/Launcher#82, Polymer/polymer#554
+                setTimeout(function appendAsync() {
+                    document.head.appendChild(link);
+                });
+                return this;
+            }
+
+            /**
+             * Insert template into DOM.
+             * @param {launcher-launchpad}
+             * @returns {HTMLTemaplteElement} inserted template (launchpad.subTemplate)
+             */
+            function insertTemplate(launchpad) {
+                launchpad.subTemplate.bindingDelegate = new PolymerExpressions(); //use PolymerExpressions. This allows <template if="{{val == 1}}">, etc
+
+                launchpad.$.launchpadGrid.appendChild(launchpad.subTemplate);
+                // this.subTemplate.model = this.model;
+                // this.subTemplate.model = this.json.icons;
+                // Wait for any polymer-elements in icons templates.
+                Polymer.whenReady(function attachModelWhenPolymerReady() {
+                    launchpad.subTemplate.model = launchpad.mapPerAppName;
+                });
+                return launchpad.subTemplate;
+            }
+
+            /**
+             * Empty template content.
+             * @requires HTMLTemplateElement#clear (https://github.com/Polymer/TemplateBinding/blob/51df59c16e0922dec041cfe604016aac00918d5d/src/TemplateBinding.js#L595)
+             * TODO: profile this (tomalec)
+             * @extends HTMLTemplateElement.prototype.clear
+             * @return  see HTMLTemplateElement.prototype.clear
+             */
+            LauncherLaunchpadPrototype.clear = function () {
+                // return false;
+                return this.subTemplate
+                      && (!this.subTemplate.clear || this.subTemplate.clear() || true)
+                      && this.subTemplate.parentNode.removeChild(this.subTemplate);
+                // IDEA: clear also content? (tomalec)
+                //      && HTMLTemplateElement.prototype.clear.call(this);
+            };
 
 
+            // or more importantly, or once Server-side could handle merging
+            // iconsHtml changed
+            LauncherLaunchpadPrototype.jsonChanged = function (oldVal, newVal) {
+                this.parseJson(newVal);
+                if (newVal.icons && newVal.icons.Html) {
+                    var launchpad = this;
+                    loadIconsTemplate(
+                      "/launcher/launchpad" + newVal.icons.Html,
+                      function processImportedDocument() {
+                          launchpad.clear();
 
-  })();
-</script>
-</polymer-element>
+                          createAndInsertMergedTemplate(
+                            launchpad,
+                            this.import.querySelectorAll("launchpad-tile")
+                          );
+
+                      }
+                    );
+                } else if (newVal) {
+                    //This row suppose to help debugging of a strange polymer exception.
+                    console.warn("A wrong value has been assigned to launch-pad.json", newVal, this);
+                    createAndInsertMergedTemplate(this);
+                } else {
+                    createAndInsertMergedTemplate(this);
+                }
+            };
+
+            function createAndInsertMergedTemplate(launchpad, tiles) {
+                var template = document.createElement("template");
+                template.setAttribute("bind", "");
+
+                if (tiles) {
+                    tiles = Array.prototype.slice.call(tiles, 0);
+                    tiles.sort(function (a, b) {
+                        var aName = a.getAttribute("appname").trim();
+                        var bName = b.getAttribute("appname").trim();
+
+                        aName = launchpad.mapPerAppName[aName].name;
+                        bName = launchpad.mapPerAppName[bName].name;
+
+                        var at = typeof aName.sortNumber == "undefined" ? aName.name : aName.sortNumber;
+                        var bt = typeof bName.sortNumber == "undefined" ? bName.name : bName.sortNumber;
+
+                        at = at.toString();
+                        bt = bt.toString();
+
+                        if (at < bt) {
+                            return -1;
+                        } else if (at > bt) {
+                            return 1;
+                        }
+
+                        return 0;
+                    });
+
+                    // wrap each tile in template and add to aggregated one
+                    for (var nodeNo = 0; nodeNo < tiles.length; nodeNo++) {
+                        var tile = tiles[nodeNo];
+                        var appName = tile.getAttribute("appname");
+                        // get exact template for icon (as some imports/scripts could be there)
+                        var appIconTempl = tile.querySelector("template");
+                        // change binding to match launchpad's own json structure.
+                        appIconTempl.setAttribute("bind", "{{icon}}");
+                        // clone our tile template
+                        var newTile = document.importNode(tileTempl.content, true);
+                        // distribute icon into tile
+                        appIconTempl && newTile.querySelector("launchpad-icon").appendChild(appIconTempl);
+                        // wrap tile into binding namespace
+                        var tileAppNamespace = document.createElement("template");
+                        tileAppNamespace.setAttribute("bind", "{{" + appName + "}}");
+                        tileAppNamespace.content.appendChild(newTile);
+                        // put bound tile into template of aggregated tiles
+                        template.content.appendChild(tileAppNamespace);
+                    }
+
+                }
+                // add tiles for iconless apps
+                for (var nodeNo = 0; nodeNo < launchpad.iconlessNames.length; nodeNo++) {
+                    var appName = launchpad.iconlessNames[nodeNo];
+                    var newTile = document.importNode(tileTempl.content, true);
+                    // wrap tile into binding namespace
+                    var tileAppNamespace = document.createElement("template");
+                    tileAppNamespace.setAttribute("bind", "{{" + appName + "}}");
+                    tileAppNamespace.content.appendChild(newTile);
+                    // put bound tile into template of aggregated tiles
+                    template.content.appendChild(tileAppNamespace);
+                }
+                // stamp template into main document
+                launchpad.subTemplate = template;
+                insertTemplate(launchpad);
+
+            }
+
+            Polymer(LauncherLaunchpadPrototype);
+        })();
+    </script>
+</dom-module>
