Enable juicy-redirect

--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -30,7 +30,7 @@
     <link rel="import" href="/sys/dom-bind-notifier/dom-bind-notifier.html" />
     <link rel="import" href="/sys/juicy-tile-editor/src/juicy-tile-editor.html" />
     <link rel="import" href="/sys/juicy-display-router/juicy-display-router.html" />
-    <!-- Disable untill migrated to Polymer1 <link rel="import" href="/sys/juicy-redirect/src/juicy-redirect.html" /> -->
+    <link rel="import" href="/sys/juicy-redirect/src/juicy-redirect.html" />
 
     <!-- Style sheets -->
     <!-- Disable untill migrated to Polymer1 <link rel="import" href="/sys/bootstrap.html" /> -->
