--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-tree.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-tree.html
@@ -1,8 +1,234 @@
 ﻿<link href="juicy-toggle-icon-button.html" rel="import" />
 <link href="css/jte-fontawesome.css" rel="stylesheet" />
-<link href="css/juicy-tile-tree.css" rel="stylesheet" />
 
 <template id="juicy-tile-tree">
+    <style type="text/css">
+        @import "css/jte-fontawesome.css";
+    </style>
+    <style>
+        :host {
+            overflow: auto;
+            height: calc(100% - 35px);
+            position: relative;
+            display: block;
+            width: 100%;
+        }
+
+        ul,
+        ul.juicy-tile-tree,
+        ul.juicy-tile-tree-branch,
+        ul.juicy-tile-tree-item {
+            margin: 0px;
+            list-style: none;
+            padding: 0;
+        }
+
+        li {
+            white-space: nowrap;
+            position: relative;
+        }
+
+        .element-label {
+            cursor: default;
+            padding: 1px 4px 2px 4px;
+            border-radius: 2px;
+            position: relative;
+            box-sizing: border-box;
+            height: 26px;
+        }
+
+        .element-label.highlight {
+            background-color: #01629E;
+            color: white;
+        }
+
+        .element-label:hover .visibility {
+            display: block;
+        }
+
+        .element-label.active:hover .visibility {
+            display: none;
+        }
+
+        .element-label.highlight .visibility {
+            background-color: #01629e;
+        }
+
+        .element-label div.txt {
+            white-space: nowrap;
+            font-size: 0px;
+        }
+
+        .element-label div.txt i.jte-icon {
+            font-size: 12px;
+        }
+
+        i.jte-icon,
+        juicy-toggle-icon-button {
+            line-height: 1em;
+            vertical-align: middle;
+        }
+
+        juicy-toggle-icon-button.expand {
+            position: absolute;
+            top: 6px;
+            left: -17px;
+        }
+
+        .blurred {
+            opacity: 0.5;
+        }
+
+        .drag-helper {
+            display: none;
+            background-color: #fff5bc;
+            border: #ffd800;
+            color: black;
+            padding: 1px 4px;
+            line-height: normal;
+            opacity: 0.8;
+        }
+
+        .drag-helper.dragging {
+            display: block;
+        }
+
+        juicy-draggable {
+            /*cursor: move;*/
+        }
+
+        .drop-item.drag-hover {
+            background-color: #bdf337;
+            color: #404040;
+        }
+
+        .visibility {
+            position: absolute;
+            top: 0px;
+            right: 0px;
+            display: none;
+            padding: 7px 6px 7px 6px;
+            border-radius: 2px;
+            box-sizing: border-box;
+            height: 26px;
+        }
+
+        .visibility[checked] {
+            display: block;
+        }
+
+        li.collapsed > ul {
+            display: none;
+        }
+
+        .item-name,
+        input[type=text].item-name {
+            width: 100%;
+            border: 1px solid transparent;
+            color: white;
+            background-color: transparent;
+            vertical-align: middle;
+            padding: 2px 4px;
+            box-sizing: border-box;
+            font-size: 11px;
+            line-height: normal;
+            vertical-align: middle;
+        }
+
+        input[type=text].item-name:focus {
+            outline: none;
+        }
+
+        input[type=text].item-name.active {
+            border-color: white;
+        }
+
+        i.jte-icon ~ .item-name {
+            width: calc(100% - 16px);
+        }
+
+        .item-name::selection {
+            background-color: #ffd800;
+            color: black;
+        }
+
+        /* indentation of tree levels */
+
+        ul .element-label,
+        ul .expand {
+            padding-left: calc(1 * 14px + 6px);
+        }
+
+        ul ul .element-label,
+        ul ul .expand {
+            padding-left: calc(2 * 14px + 6px);
+        }
+
+        ul ul ul .element-label,
+        ul ul ul .expand {
+            padding-left: calc(3 * 14px + 6px);
+        }
+
+        ul ul ul ul .element-label,
+        ul ul ul ul .expand {
+            padding-left: calc(4 * 14px + 6px);
+        }
+
+        ul ul ul ul ul .element-label,
+        ul ul ul ul ul .expand {
+            padding-left: calc(5 * 14px + 6px);
+        }
+
+        ul ul ul ul ul ul .element-label,
+        ul ul ul ul ul ul .expand {
+            padding-left: calc(6 * 14px + 6px);
+        }
+
+        ul ul ul ul ul ul ul .element-label,
+        ul ul ul ul ul ul ul .expand {
+            padding-left: calc(7 * 14px + 6px);
+        }
+
+        ul ul ul ul ul ul ul ul .element-label,
+        ul ul ul ul ul ul ul ul .expand {
+            padding-left: calc(8 * 14px + 6px);
+        }
+
+        ul ul ul ul ul ul ul ul ul .element-label,
+        ul ul ul ul ul ul ul ul ul .expand {
+            padding-left: calc(9 * 14px + 6px);
+        }
+
+        ul ul ul ul ul ul ul ul ul ul .element-label,
+        ul ul ul ul ul ul ul ul ul ul .expand {
+            padding-left: calc(10 * 14px + 6px);
+        }
+
+        ul ul ul ul ul ul ul ul ul ul ul .element-label,
+        ul ul ul ul ul ul ul ul ul ul ul .expand {
+            padding-left: calc(11 * 14px + 6px);
+        }
+
+        ul ul ul ul ul ul ul ul ul ul ul ul .element-label,
+        ul ul ul ul ul ul ul ul ul ul ul ul .expand {
+            padding-left: calc(12 * 14px + 6px);
+        }
+
+        ul ul ul ul ul ul ul ul ul ul ul ul ul .element-label,
+        ul ul ul ul ul ul ul ul ul ul ul ul ul .expand {
+            padding-left: calc(13 * 14px + 6px);
+        }
+
+        ul ul ul ul ul ul ul ul ul ul ul ul ul ul .element-label,
+        ul ul ul ul ul ul ul ul ul ul ul ul ul ul .expand {
+            padding-left: calc(14 * 14px + 6px);
+        }
+
+        ul ul ul ul ul ul ul ul ul ul ul ul ul ul .element-label,
+        ul ul ul ul ul ul ul ul ul ul ul ul ul ul .expand {
+            padding-left: calc(15 * 14px + 6px);
+        }
+    </style>
     <ul id="container" class="juicy-tile-tree branch"></ul>
 </template>
 <script>
@@ -21,7 +247,9 @@
             var root = this;//.createShadowRoot();
             var template = scriptDocument.querySelector("#juicy-tile-tree");
             var clone = document.importNode(template.content, true);
+            var iconsUrl = new URL("css/jte-fontawesome.css", scriptDocument.querySelector("head").baseURI);
 
+            clone.querySelector("style").innerHTML = '@import "' + iconsUrl.href + '"';
             root.appendChild(clone);
             this.$ = {
                 container: root.querySelector("#container")
@@ -287,7 +515,7 @@
         proto.branchNameDblclickAction = function (e) {
             var target = e.currentTarget;
             var uid = target.dataset["uid"];
-            var label = this.querySelector(".element-label[data-uid=" + uid + "]");
+            var label = this.querySelector(".element-label[data-uid='" + uid + "']");
 
             this.activeUid = uid;
             label.classList.toggle("active", true);
@@ -301,7 +529,7 @@
         proto.nameBlurAction = function (e) {
             var target = e.currentTarget;
             var uid = target.dataset["uid"];
-            var label = this.querySelector(".element-label[data-uid=" + uid + "]");
+            var label = this.querySelector(".element-label[data-uid='" + uid + "']");
 
             label.classList.toggle("active", false);
             target.classList.toggle("active", false);
@@ -352,9 +580,9 @@
                 var id = ids.slice(0, i + 1).join("-");
 
                 this.expanded[id] = true;
-                
-                var li = this.querySelector("li[data-uid=" + id + "]");
-                var expander = this.querySelector("li[data-uid=" + id + "] juicy-toggle-icon-button.expand");
+
+                var li = this.querySelector("li[data-uid='" + id + "']");
+                var expander = this.querySelector("li[data-uid='" + id + "'] juicy-toggle-icon-button.expand");
 
                 li.classList.toggle("collapsed", false);
                 li.classList.toggle("expanded", true);
@@ -368,7 +596,7 @@
         proto.highlightBranch = function (uid, extend) {
             if (!extend) {
                 for (var i in this.highlighted) {
-                    var element = this.querySelector("div.element-label[data-uid=" + i + "]");
+                    var element = this.querySelector("div.element-label[data-uid='" + i + "']");
 
                     if (element) {
                         element.classList.toggle("highlight", false);
@@ -377,14 +605,14 @@
 
                 this.highlighted = {};
             }
-            
+
             this.highlighted[uid] = true;
-            this.querySelector("div.element-label[data-uid=" + uid + "]").classList.toggle("highlight", true);
+            this.querySelector("div.element-label[data-uid='" + uid + "']").classList.toggle("highlight", true);
         };
 
         proto.unhighlightBranch = function (uid) {
             this.highlighted[uid] = false;
-            this.querySelector("div.element-label[data-uid=" + uid + "]").classList.toggle("highlight", false);
+            this.querySelector("div.element-label[data-uid='" + uid + "']").classList.toggle("highlight", false);
         };
 
         window.JuicyTileTree = document.registerElement("juicy-tile-tree", {
