--- a/src/Launcher/wwwroot/sys/starcounter-include/starcounter-include.html
+++ b/src/Launcher/wwwroot/sys/starcounter-include/starcounter-include.html
@@ -18,7 +18,7 @@ version: 0.0.7
 
 <template id="partial-template">
     <juicy-tiles-setup-sync
-        apiUrl="/launcher/juicytilessetup"></juicy-tiles-setup-sync>
+        api-url="/launcher/juicytilessetup"></juicy-tiles-setup-sync>
     <juicy-tile-grid
         defaultTileSetup='{
             "precalculateHeight": true,
